# ZigPicoSDKStaticLib

./: .gitignore  Comments.md  ReadMe.md  build.zig
pico/: CMakeLists.txt  ReadMe.md  main.c
pico/include/: my_module.h
src/: root.zig
